# meell

./: .gitignore  manage.py  pyproject.toml
mell/: asgi.py  settings.py  urls.py  wsgi.py
shop/: admin.py  contex_proccesors.py  models.py  urls.py  utils.py  views.py
shop/migrations/: 0001_initial.py  0002_alter_brand_options_alter_product_options_and_more.py
shop/templates/shop/: main_view.html  product_list.html
shop/templates/shop/includes/: product_card.html
static/css/: fonts.css  navbar.css
templates/: base.html
templates/header/: category_submenu.html  header.html  navbar.html
templates/includes/: navbar.html
